<resources>
    <string name="app_name">AndroidAcademyApp</string>
    <string name="your_name">   </string>
    <string name="click">click</string>
    <string name="favorite_phrase">HAVE A NICE DAY!</string>
    <string name="who_are_you_today">Who are you today?</string>
    <string name="set_text">say meow</string>
    <string name="set_text_two">SMILE!!</string>
    <string name="second_activity">second activity</string>
    <string name="first_activity">first activity</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="rating_13"><b>13+</b></string>
    <string name="name_avengers">Avengers:\nEnd Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="review">125 reviews</string>
    <string name="storyline">Storyline</string>
    <string name="story">After the devastating events of Avengers: Infinity War, \nthe universe is in ruins. With the help of remaining allies,
        \nthe Avengers assemble once more in order to reverse \nThanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert\nDowney Jr.</string>
    <string name="chris_evans">Chris\nEvans</string>
    <string name="mark_ruffalo">Mark\nRuffalo</string>
    <string name="chris_hemsworth">Chris\nHemsworth</string>

</resources>