<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/background_avangers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@+id/name_film"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="?android:selectableItemBackground"
            android:drawableLeft="@drawable/path"
            android:fontFamily="@font/roboto_thin"
            android:padding="8dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/background"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="226dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/rating_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/background" />

        <TextView
            android:id="@+id/name_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/name_avengers"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/genre"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/name_film" />


        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/CustomRatingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:numStars="5"
            android:rating="4"
            android:backgroundTint="@color/pink"
            android:progressBackgroundTint="@color/grey"
            app:layout_constraintEnd_toStartOf="@id/review"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.89dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/review"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="70dp"
            android:layout_height="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/review" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:fontFamily="@font/roboto"
            android:text="@string/story"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/robert_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/robert"
            app:layout_constraintEnd_toStartOf="@+id/chris_img"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/chris_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_evans"
            app:layout_constraintEnd_toStartOf="@+id/mark_img"
            app:layout_constraintStart_toEndOf="@+id/robert_img"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <ImageView
            android:id="@+id/mark_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/mark"
            app:layout_constraintEnd_toStartOf="@+id/chris2_img"
            app:layout_constraintStart_toEndOf="@+id/chris_img"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <ImageView
            android:id="@+id/chris2_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_hams"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/mark_img"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />


        <TextView
            android:id="@+id/robert_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="109dp"
            android:text="@string/robert_downey_jr"
            android:textColor="#d8d8d8"
            android:textSize="12sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chris1_text"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/robert_img" />

        <TextView
            android:id="@+id/chris1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="109dp"
            android:scaleType="fitCenter"
            android:text="@string/chris_evans"
            android:textColor="#d8d8d8"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mark_text"
            app:layout_constraintStart_toEndOf="@+id/robert_text"
            app:layout_constraintTop_toBottomOf="@id/chris_img" />

        <TextView
            android:id="@+id/mark_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="109dp"
            android:text="@string/mark_ruffalo"
            android:textColor="#d8d8d8"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chris2_text"
            app:layout_constraintStart_toEndOf="@+id/chris1_text"
            app:layout_constraintTop_toBottomOf="@id/mark_img" />

        <TextView
            android:id="@+id/chris2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/chris_hemsworth"
            android:textColor="#d8d8d8"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/mark_text"
            app:layout_constraintTop_toBottomOf="@id/chris2_img" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="robert_img" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>